//SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION. All rights reserved.

//Licensed under the Apache License, Version 2.0 (the "License");
//you may not use this file except in compliance with the License.
//You may obtain a copy of the License at

//http://www.apache.org/licenses/LICENSE-2.0

//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS,
//WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//See the License for the specific language governing permissions and
//limitations under the License.

//SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package router;

option go_package = "go.corp.nvidia.com/osmo/proto/router;router";

// Common message types for router operations

// Protocol types for port forwarding
enum Protocol {
  PROTOCOL_UNSPECIFIED = 0;
  PROTOCOL_TCP = 1;
  PROTOCOL_UDP = 2;
}

// Operation types for tunnel operations
enum OperationType {
  OPERATION_UNSPECIFIED = 0;
  OPERATION_EXEC = 1;
  OPERATION_PORT_FORWARD = 2;
  OPERATION_RSYNC = 3;
}

// Unified Tunnel operation messages
// This provides a single interface for all operation types (Exec, PortForward, Rsync)
message TunnelRequest {
  oneof message {
    TunnelInit init = 1;
    TunnelData data = 2;
    TunnelMetadata metadata = 3;
    TunnelClose close = 4;
  }
}

message TunnelInit {
  string session_key = 1;
  string cookie = 2;
  string workflow_id = 3;
  OperationType operation = 4;  // EXEC, PORT_FORWARD, or RSYNC

  // Operation-specific fields (only populate relevant ones)
  Protocol protocol = 5;        // For PORT_FORWARD: TCP or UDP
  int32 remote_port = 6;        // For PORT_FORWARD: port on remote task
  string direction = 7;         // For RSYNC: "upload" or "download"
}

message TunnelData {
  bytes payload = 1;
  uint64 seq = 2;
}

message TunnelMetadata {
  oneof metadata {
    ExecResize resize = 1;      // For EXEC: terminal resize
    // Future: other operation-specific metadata can be added here
  }
}

message ExecResize {
  uint32 rows = 1;           // Terminal rows
  uint32 cols = 2;           // Terminal columns
}

message TunnelClose {
  int32 exit_code = 1;          // Optional: For EXEC
  bool success = 2;             // Optional: For RSYNC
  string error_message = 3;     // Optional: For RSYNC
  string reason = 4;            // Optional: For PORT_FORWARD
}

message TunnelResponse {
  oneof message {
    TunnelInit init = 1;
    TunnelData data = 2;
    TunnelError error = 3;
    TunnelMetadata metadata = 4;
    TunnelClose close = 5;
  }
}

message TunnelError {
  string message = 1;
  string code = 2;              // gRPC status code string
}

// Control service messages
message SessionInfoRequest {
  string session_key = 1;
}

message SessionInfoResponse {
  bool active = 1;
  string workflow_id = 2;
  int64 created_at = 3;
  OperationType operation_type = 4;
}
